# litevikings

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lv/: Cargo.toml
crates/lv-core/: Cargo.toml
crates/lv-core/src/: context.rs  error.rs  lib.rs  message.rs  owner.rs  preset.rs  uri.rs
crates/lv-engine/: Cargo.toml
crates/lv-engine/src/: engine.rs  lib.rs
crates/lv-engine/src/llm/: chat.rs  config.rs  embedder.rs  mod.rs  prompts.rs
crates/lv-engine/src/parse/: code_parser.rs  markdown.rs  mod.rs  pipeline.rs
crates/lv-engine/src/service/: context.rs  debug_service.rs  fs_service.rs  mod.rs  resource_service.rs  search_service.rs  session_service.rs
crates/lv-engine/src/storage/: db.rs  embedding_queue.rs  mod.rs  schema.rs  viking_fs.rs
crates/lv-proto/: Cargo.toml  build.rs
crates/lv-proto/proto/litevikings/v1/: admin.proto  common.proto  filesystem.proto  relations.proto  resources.proto  search.proto  sessions.proto
crates/lv-proto/src/: lib.rs
crates/lv-server/: Cargo.toml
crates/lv-server/src/: lib.rs  server.rs
crates/lv-server/src/grpc/: auth.rs  handler.rs  mod.rs
crates/lv/src/: client.rs  main.rs
crates/lv/src/commands/: add_resource.rs  find.rs  ls.rs  mkdir.rs  mod.rs  read.rs  read_abstract.rs  rm.rs  serve.rs  session.rs  setup.rs  status.rs  write.rs
docs/: architecture.md
docs/bugs/: 001-hnsw-startup-hang.md  002-known-issues.md
docs/deploy/: mac-mini.md
docs/design/: cli.md  core.md  engine.md  proto.md  server.md
scripts/: setup-mac-mini.sh
