[workspace]
members = [
    "crates/lv-core",
    "crates/lv-proto",
    "crates/lv-engine",
    "crates/lv-server",
    "crates/lv",
]
resolver = "2"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.8", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Storage
duckdb = { version = "1", features = ["bundled"] }

# Embeddings (local ONNX)
fastembed = "4"

# CLI
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true
