[package]
name = "lv-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
lv-core = { path = "../lv-core" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
duckdb = { workspace = true }
fastembed = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Code parsing
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
