[package]
name = "lv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lv-core = { path = "../lv-core" }
lv-proto = { path = "../lv-proto" }
lv-engine = { path = "../lv-engine" }

tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
