[package]
name = "lv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lv"
path = "src/main.rs"

[dependencies]
lv-core = { path = "../lv-core" }
lv-proto = { path = "../lv-proto" }
lv-engine = { path = "../lv-engine" }
lv-server = { path = "../lv-server" }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
shellexpand = "3"
